K8s/backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-svc
  namespace: git-app
  labels:
    app: backend
spec:
  selector:
    app: git-back-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
