K8s/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: minimal-ingress
    namespace: git-app
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: nginx
    rules:
    - host: github-res.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                number: 5173
    - host: git-backend.com
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port:
                number: 5000
